Logica de Negocio Para facturacion y Mensajeria interna, y Creacion de Usuarios